Fixing Prog03 on Mobile

--- a/class-env/pages/Prog03/general.css
+++ b/class-env/pages/Prog03/general.css
@@ -30,65 +30,23 @@ header
 	border-color: rgba(0, 0, 0, 0.2);
 }
 
-.nav-bubble-wrapper
-{
-	background-color: white;
-	top: 0;
-	z-index: 10;
-	box-sizing: border-box;
-}
-
-.nav-bubble
-{
-	align-self: center;
-	justify-content: flex-end;
-	display: flex;
-	flex-direction: row;
-	gap: 10px;
-	border: 3px #fa713f;
-	border-style: none none solid none;
-}
-
-.nav-bubble-item
-{
-	padding: 10px 2rem 10px 2rem;
-	min-width: 1rem;
-	margin: 10px 0 10px 0;
-	transition: 0.3s;
-	text-align: center;
-	color: black;
-	text-decoration: none;
-	border-radius: 25px;
-	border: 3px solid transparent;
-}
-
-.nav-bubble-item:last-child
-{
-	margin-right: 1rem;
-}
-
-.nav-bubble-item:hover
-{
-	cursor: pointer;
-	background-color: #e6e6e6;
-	color: #fa713f;
-}
-
-
 article
 {
 	width: 80%;
 	margin: 1rem auto auto auto;
 	display: flex;
 }
+
 article p
 {
 	text-indent: 3rem;
 }
+
 .paragraph-with-div
 {
 	display: flex;
 }
+
 .paragraph-with-div p
 {
 	flex: 3;
@@ -104,13 +62,13 @@ article p
 	margin: auto 1rem auto 1rem;
 }
 
-
 footer
 {
 	margin: 1rem auto auto auto;
 	padding: 1rem;
 	border-top: 3px #fa713f solid;
 }
+
 .footer-wrapper
 {
 	bottom: auto;
@@ -119,14 +77,43 @@ footer
 	width: 100%;
 }
 
-
-@media (max-width: 1160px){
+@media (max-width: 1160px)
+{
 	main
 	{
-		width: 100%;
 		text-wrap: wrap;
+		width: 100%;
+	}
+
+	main section
+	{
+		border: 1px solid;
+		margin: auto;
+		padding: 0;
+	}
+
+	.paragraph-with-div
+	{
+		display: block;
+	}
+
+	.paragraph-with-div p
+	{
+		flex: none;
+	}
+
+	.paragraph-with-div aside
+	{
+		flex: none;
+		width: 100%;
+		margin: auto auto auto auto;
+	}
+	article
+	{
+		display: block;
 	}
 }
+
 main section
 {
 	border: 1px solid;
